# ducktop2

./: .gitattributes  .gitignore  01_power_battery.kicad_sch  02_ec_mcu.kicad_sch  03_mu_carrier.kicad_sch  04_usb_c_io.kicad_sch  05_power_inputs.kicad_sch  06_tcp0_external_hdmi.kicad_sch  07_radio_oled_gps.kicad_sch  08_internal_services.kicad_sch  09_ham_radio.kicad_sch  09_radio_daughterboard_interface.kicad_sch  10_internal_display.kicad_sch  11_intehill_monitor_interface.kicad_sch  12_keyboard_daughterboard.kicad_pcb  12_keyboard_daughterboard.kicad_pro  12_keyboard_daughterboard.kicad_sch  12_keyboard_interface.kicad_sch  13_radio_audio_codec.kicad_sch  14_maker_mcu.kicad_sch  15_system_audio.kicad_sch  16_gigabit_ethernet.kicad_sch  AI_REVIEW_PROMPT.md  INTEHILL_TEARDOWN_FINDINGS.md  INTEHILL_TEARDOWN_MEASUREMENT_GUIDE.md  LAYOUT_READINESS.md  PRE_LAYOUT_FREEZE.md  README.md  ducktop2.kicad_dru  ducktop2.kicad_prl  ducktop2.kicad_pro  ducktop2.kicad_sch  fp-lib-table  mechanical_layout_planner.html  sym-lib-table
docs/: build-and-verify.md  design-status.md  display-direct-edp.md  ducktop1.md  hardware.md  mechanical.md  review-prompt.md
ducktop2.3dshapes/: Wurth_9774055243R.step
ducktop2.pretty/: ADI_UF20_QFN20_4x4_P0.5_EP2.45.kicad_mod  Amphenol_MDT420E01001_H4.2.kicad_mod  Amphenol_MDT420M01001_H4.2.kicad_mod  CSD18540Q5B_DNK.kicad_mod  CSD19537Q3_DQG.kicad_mod  Cherry_MX_ULP_SMD.kicad_mod  Coilcraft_XGL4020.kicad_mod  Coilcraft_XGL5030.kicad_mod  Coilcraft_XGL6030.kicad_mod  DRA818_Castellated.kicad_mod  Infineon_IM68A130V01.kicad_mod  JXD1-1022NL_MidMount.kicad_mod  MiniCircuits_QA2224_PL484.kicad_mod  PE42820_QFN-32-1EP_5x5mm_P0.5mm.kicad_mod  QFN-76-1EP_9x9mm_P0.4mm_EP6.3x6.3mm.kicad_mod  SMT_Standoff_M2_H2.5_C4_Tail2.7x1.5.kicad_mod  SMT_Standoff_M2_H5.5_C4_Tail3.0x1.5.kicad_mod  SSD1306_0.96in_Module_4Pin.kicad_mod  TDK_TFM201610.kicad_mod  Texas_RPA0010A_VQFN-HR-10_3x3mm.kicad_mod  Texas_RPW0010A_VQFN-HR-10_2x2mm.kicad_mod  Texas_RYQ0021A_VQFN-HR-21_3x5mm.kicad_mod  Texas_TPD1S514_YZ_WCSP-12_1.99x1.29mm_P0.5mm.kicad_mod  Wurth_9774055243R_M2_H5.5.kicad_mod  X2SON-4_1.0x1.0mm_P0.65mm.kicad_mod
firmware/: CMakeLists.txt  CMakePresets.json  README.md  VERSION
firmware/ec/include/ducktop2/ec/: ec_commit.h  ec_policy.h  ec_telemetry.h
firmware/ec/src/: ec_commit.c  ec_policy.c  ec_telemetry.c
firmware/maker/include/ducktop2/maker/: maker_policy.h
firmware/maker/src/: maker_policy.c
firmware/release/: README.md  hil_matrix.csv  target_release.json
firmware/tests/: test_ec_commit.c  test_ec_policy.c  test_ec_telemetry.c  test_maker_policy.c
firmware/tests/vectors/: ec_policy_vectors.csv  maker_policy_vectors.csv
firmware/tools/: run_host_tests.sh  verify_release_contract.py
firmware/tps25751a/: README.md  ducktop2_dual_role_config.json  release_manifest.json  verify_config.py
manufacturing/: direct_edp_harness_release.json  lattepanda_mu_bios_release.md  mainboard_rule_exceptions.md  mainboard_stackup_release.json
mechanical/: MECHANICAL_MEASUREMENTS_AND_GATES.md  RETENTION_AND_MOUNTING_RELEASE.md  floorplan_revA.json  floorplan_revB_direct_edp.json  floorplan_revC_battery_band.json
(+76 files in other folders)
